<resources>
    <string name="app_name">firebaselogin_desafio4</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_repeat">Repeat Password</string>
    <string name="remember">Remember</string>
    <string name="btn_login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="namegame">Game name</string>
    <string name="creationdate">Creation Date</string>
    <string name="desc">Description</string>
    <string name="btn_save_game">Save Game</string>
    <string name="gameName">Game Name</string>
    <string name="microfone">microfone</string>

</resources>