<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/round_body"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:paddingLeft="10dp"
            android:text="@string/email"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingLeft="10dp"
            android:text="@string/password"
            android:textColor="@color/teal_700"

            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <CheckBox
            android:id="@+id/checkboxLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/teal_200"
            android:text="@string/remember"
            android:textColor="@color/black"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_body"
            android:backgroundTint="@color/red"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/btn_cadastre_se"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:text="@string/create_account"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />


        <!--
            <ImageView
                android:id="@+id/google_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/common_google_signin_btn_icon_dark" />
        -->

    </LinearLayout>

</ScrollView>